@@ -1,4 +1,11 @@
-libexec_PROGRAMS = ldm-gtk-greeter ldm-webkit-greeter
+libexec_PROGRAMS =
+
+if HAVE_GTK_GREETER
+libexec_PROGRAMS += ldm-gtk-greeter
+endif
+if HAVE_WEBKIT_GREETER
+libexec_PROGRAMS += ldm-webkit-greeter
+endif
 
 LIBGREETER_LIB = $(top_builddir)/libldmgreeter/libldmgreeter.la
 LIBGREETER_CFLAGS = \
@@ -12,32 +19,32 @@ ldm_gtk_greeter_SOURCES = \
 
 ldm_gtk_greeter_CFLAGS = \
 	$(LIBGREETER_CFLAGS) \
-	$(LIGHTDM_GREETER_CFLAGS) \
+	$(LIGHTDM_GTK_GREETER_CFLAGS) \
 	$(WARN_CFLAGS) \
 	-DVERSION=\"$(VERSION)\" \
 	-DGETTEXT_PACKAGE=\"$(GETTEXT_PACKAGE)\" \
 	-DLOCALE_DIR=\"$(localedir)\" \
-	-DLIGHTDM_GREETER_BINARY=\"ldm-gtk-greeter\"
+	-DLIGHTDM_GTK_GREETER_BINARY=\"ldm-gtk-greeter\"
 
 ldm_gtk_greeter_LDADD = \
 	$(LIBGREETER_LDADD) \
-	$(LIGHTDM_GREETER_LIBS)
+	$(LIGHTDM_GTK_GREETER_LIBS)
 
 ldm_webkit_greeter_SOURCES = \
 	ldm-webkit-greeter.c
 
 ldm_webkit_greeter_CFLAGS = \
 	$(LIBGREETER_CFLAGS) \
-	$(LIGHTDM_WKGREETER_CFLAGS) \
+	$(LIGHTDM_WEBKIT_GREETER_CFLAGS) \
 	$(WARN_CFLAGS) \
 	-DVERSION=\"$(VERSION)\" \
 	-DGETTEXT_PACKAGE=\"$(GETTEXT_PACKAGE)\" \
 	-DLOCALE_DIR=\"$(localedir)\" \
-	-DLIGHTDM_WKGREETER_BINARY=\"ldm-webkit-greeter\"
+	-DLIGHTDM_WEBKIT_GREETER_BINARY=\"ldm-webkit-greeter\"
 
 ldm_webkit_greeter_LDADD = \
 	$(LIBGREETER_LDADD) \
-	$(LIGHTDM_WKGREETER_LIBS)
+	$(LIGHTDM_WEBKIT_GREETER_LIBS)
 
 DISTCLEANFILES = \
 	Makefile.in
